<resources>
    <string name="app_name">Notes</string>
    <string name="search">Search</string>
    <string name="search_hint">Search notes…</string>
    <string name="no_notes">No notes yet. Tap + to add one.</string>
    <string name="add_note">Add note</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="untitled">Untitled</string>
    <string name="all">All</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="tags_hint">Tags (comma separated)</string>
    <string name="delete_note">Delete note</string>
</resources>
