<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editorRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleInput"
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentInput"
                android:hint="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:gravity="top|start"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tags_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tagsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tags_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                style="@style/Widget_Notes_OutlinedButton"
                android:text="@string/delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget_Notes_FilledButton"
                android:text="@string/save"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
